--- a/expense.html
+++ b/expense.html
@@ -9,33 +9,37 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
+
 <body style="margin: 0">
   <h2 class="mt-3">Expense Tracker</h2>
   <form id="expense-form" class="row g-3 align-items-center">
     
     <div class="col-auto">
-      <label for="amount" class="form-label">Amount:</label>
-      <input type="number" name="amount" id="amount" class="form-control" required>
+      <label for="amount" class="form-label" style=" border: none; font-size: 18px; font-weight: bold ">Amount:</label>
+      <input type="number" name="amount" id="amount" class="form-control" style="border-width: 4px; border-color: rgb(129, 182, 243)" required>
     </div>
     <div class="col-auto">
-      <label for="expense" class="form-label">Description:</label>
-      <input type="text" name="expense" id="expense" class="form-control" required>
+      <label for="expense" class="form-label" style="border: none; font-size: 18px; font-weight: bold ">Description:</label>
+      <input type="text" name="expense" id="expense" class="form-control" style="border-width: 4px; border-color: rgb(129, 182, 243)" required>
     </div>
     <div class="col-auto">
-      <label for="category" class="form-label">Category:</label>
-      <select id="category" name="category" class="form-select" required>
-        <option value="movies">Movies</option>
+      <label for="category" class="form-label" style="  border: none; font-size: 18px; font-weight: bold ">Category:</label>
+      <select id="category" name="category" class="form-select" style="border-width: 4px; border-color: rgb(129, 182, 243)" required>
+        <option value="Invest">Invest</option>
+        <option value="Basic">Basic Needs</option>
+        <option value="Entertainment">Entertainment</option>
         <option value="shopping">Shopping</option>
         <option value="travel">Travel</option>
-        <option value="taxi">Other</option>
+        <option value="Other">Other</option>
       </select>
     </div>
+
     <div class="col-auto">
-      <button type="submit" class="btn btn-primary">Add Expense</button>
+      <button type="submit" class="btn btn-primary" style="border-width: 4px; border-color: rgb(129, 182, 243); margin-top: 10px; font-size: 18px;">Add Expense</button>
     </div>
   </form>
 
   <ul id="expense-list" class="mt-3"></ul>
-  <script src="index.js"></script>
+  <script src="expense.js"></script>
 </body>
 </html>
